<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/notification"
        />
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard"
        />
    <item
        android:id="@+id/hamburger"
        android:icon="@drawable/hamburger"
        android:title="@string/hamburger"
        />
    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop"
        android:title="@string/shop"
        />
<!--    <item-->
<!--        android:id="@+id/chat"-->
<!--        android:icon="@drawable/chat"-->
<!--        android:title="@string/chat"/>-->

</menu>